--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,12 @@
 
     <!-- External CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Bungee&family=Source+Sans+Pro:ital,wght@0,300;0,600;0,700;1,300;1,600;1,700&display=swap" >
 
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+    <link rel="stylesheet" href="/styles/header.css" type="text/css" />
 
     <!-- External JS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -23,7 +26,16 @@
       <span>tweeter</span>
     </nav>
 
+    <header>
+      <div>
+        <img src="/images/profile-hex.png">
+      </div>
+      <br>
+      <div>
+        <h2>Your Name</h2>
+      </div>
+    </header>
     <!-- Page-specific (main) content here -->
-    <main class="container"></main>
+    <main class="container"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum, eveniet temporibus laboriosam optio voluptatibus nihil non! Eaque commodi deleniti voluptatibus similique molestiae mollitia, sed facere culpa at, laborum architecto laboriosam!</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum itaque, accusantium consequatur ipsa culpa vero odio architecto at alias non hic quos, labore magni assumenda ab sit maxime debitis aliquid?</p><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum itaque, accusantium consequatur ipsa culpa vero odio architecto at alias non hic quos, labore magni assumenda ab sit maxime debitis aliquid?</p></main>
   </body>
 </html>
