Display sample avatar

--- a/public/index.html
+++ b/public/index.html
@@ -43,6 +43,7 @@
   </header>
   <!-- Page-specific (main) content here -->
   <main class="container">
+
     <section class="new-tweet">
       <form action="/" method="POST">
         <label for="tweet-text">What are you humming about?</label>
@@ -53,14 +54,15 @@
         </div>
       </form>
     </section>
+
     <section id="tweets">
       <article class="tweet">
         <header>
           <div class="userinfo">
-            <img>
-            <span class="username">Newton</span>
+            <img class="avatar" src="https://i.imgur.com/73hZDYK.png">
+            <div class="username">Newton</div>
           </div>
-          <span class="userid">@SirIsaac</span>
+          <div class="userid">@SirIsaac</div>
         </header>
         <div class="content">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed laboriosam enim, debitis eius ipsum laborum
@@ -73,6 +75,7 @@
         </footer>
       </article>
     </section>
+
   </main>
 </body>
 
