--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
   <main class="container">
 
     <section class="new-tweet">
-      <form action="/" method="POST">
+      <form id="new-tweet-form" action="/" method="POST">
         <label for="tweet-text">What are you humming about?</label>
         <textarea name="text" id="tweet-text" rows="1"></textarea>
         <div>
@@ -56,24 +56,7 @@
     </section>
 
     <section id="tweets">
-      <article class="tweet">
-        <header>
-          <div class="userinfo">
-            <img class="avatar" src="https://i.imgur.com/73hZDYK.png">
-            <div class="username">Newton</div>
-          </div>
-          <div class="userid">@SirIsaac</div>
-        </header>
-        <div class="content">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed laboriosam enim, debitis eius ipsum laborum
-          repellat omnis ad perferendis cumque consectetur deserunt voluptates beatae velit aliquid dolore quia.
-          Eligendi, libero.
-        </div>
-        <footer>
-          <span class="date-tweeted">10 days ago</span>
-          <span class="links"># $ &</span>
-        </footer>
-      </article>
+      <!-- Tweets will be displayed here! -->
     </section>
 
   </main>
