--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,7 @@
   <main class="container">
 
     <section class="new-tweet">
+      <div class="alert"></div>
       <form id="new-tweet-form" action="/" method="POST">
         <label for="tweet-text">What are you humming about?</label>
         <textarea name="text" id="tweet-text" rows="1"></textarea>
