--- a/public/index.html
+++ b/public/index.html
@@ -35,12 +35,13 @@
     <span>tweeter</span>
   </nav>
 
+  <!-- User avatar and username -->
   <header>
     <div>
       <img src="/images/profile-hex.png">
     </div>
     <div>
-      <h2>Your Name</h2>
+      <h2>Jane Doe</h2>
     </div>
   </header>
   <!-- Page-specific (main) content here -->
